lib_LTLIBRARIES = libcoyaml.la
include_HEADERS=src/copy.h  src/emitter.h  src/eval.h  src/parser.h  src/util.h  src/vars.h
ACLOCAL_AMFLAGS=-I m4
libcoyaml_la_SOURCES = src/commandline.c  src/copy.c  src/emitter.c  src/eval.c  src/helpers.c  src/parser.c  src/types.c  src/vars.c
AM_CFLAGS=-std=c11 -I/usr/include 
